# terminal

./: BACKLOG.md  Makefile  bench_measure.py  pyproject.toml  setup.py  test_text_input.py
examples/: stress.py
src/terminal/: __init__.py  _buffer.c  _buffer.pyi  buffer.py  cbuf.c  cbuf.pyi  flex.py  keys.py  measure.py  notifications.py  picker.py  screen.py  style.py  term.py  text.py  text_input.py
src/terminal/components/: __init__.py  base.py  box.py  cond.py  foreach.py  hstack.py  input.py  list.py  scroll.py  scrollbar.py  spacer.py  table.py  text.py  toast.py  vstack.py  zstack.py
src/ttyz/: __init__.py  buffer.py  cbuf.c  cbuf.pyi  ext.pyi  keys.py  measure.py  preview.py  screen.py  style.py  term.py
src/ttyz/components/: __init__.py  base.py  box.py  cond.py  foreach.py  hstack.py  input.py  list.py  scroll.py  scrollbar.py  spacer.py  (+5 more)
tests/: helpers.py  test_buffer.py  test_children_sequence.py  test_comp_box.py  test_comp_composability.py  test_comp_cond.py  test_comp_foreach.py  test_comp_hstack.py  test_comp_input.py  test_comp_list.py  test_comp_scroll.py  test_comp_scroll_backing.py  test_comp_spacer.py  test_comp_table.py  test_comp_text.py  test_comp_text_input.py  test_comp_vstack.py  test_comp_zstack.py  test_component_consistency.py  test_container_backing.py  test_control.py  test_flex.py  test_flex_grow_weight.py  test_foreach_lazy.py  test_keys.py  test_measure.py  test_notifications.py  test_perf.py  test_picker.py  test_screen.py  test_style.py  test_terminal.py  test_text.py  test_text_input.py  test_text_rendering.py  test_toast.py
(+31 files in other folders)
