[project]
name = "terminal"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["wcwidth>=0.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/terminal"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff",
    "pyright",
]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "C4", "SIM", "RET", "PTH"]
ignore = ["E501", "E701", "E741"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
